ai-server/kubernetes/argocd/yml/jaeger.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
  hostnames:
    - "alexmonitoring.snowse.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /jaeger
      backendRefs:
        - name: jaeger
          namespace: monitoring
          port: 16686
---
# Istio sends traces to zipkin.istio-system:9411 by default.
# This ExternalName service routes that traffic to Jaeger in the monitoring namespace.
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: istio-system
spec:
  type: ExternalName
  externalName: jaeger.monitoring.svc.cluster.local
  ports:
    - port: 9411
      targetPort: 9411
      name: http-query
