ai-server/kubernetes/argocd/yml/prometheus.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
  hostnames:
    - "alexmonitoring.snowse.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /prometheus
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: prometheus-kube-prometheus-prometheus
          namespace: monitoring
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
  hostnames:
    - "alexmonitoring.snowse.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - name: prometheus-grafana
          namespace: monitoring
          port: 80
